1. complete role api 2. abstract and refactor dao package
